Add test for confirmed anagram

--- a/specs.html
+++ b/specs.html
@@ -10,6 +10,8 @@ SPECS
 
   User inputs "rat".  Return "please input a word and wordbank".
 
+//one letter
+
   User inputs "rat" and "beer".  Output "beer: NO".
 
   User inputs "rat" and "tar".  Output "tar: YES".
