Add test for capital bank

--- a/specs.html
+++ b/specs.html
@@ -24,6 +24,9 @@ SPECS
   User inputs "Seat" and "east".
   Return "east: YES".
 
-  User inputs "east" and "east SEAT bread".
-  Return "east: INPUT", "seat: YES", "bread: NO"
+  User inputs "east" and "SEAT bread".
+  Return "seat: YES", "bread: NO"
   //exact same word, what do
+
+  User inputs "east" and "east".
+  Return "east: INPUT"
